last check before handing in

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ cache:
 jdk:
 - oraclejdk8
 sudo: required
-services:
+services:
 - docker
 script:
-- docker login -u $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD 
+- docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
 - mvn clean package dockerfile:build dockerfile:push
 before_install:
 - chmod +x mvnw
